--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -41,5 +45,12 @@
         dicta magnam? Libero, sequi deleniti!
       </p>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+
+    <script>
+      let notyf = new Notyf()
+      notyf.success('Way to go Bud')
+      notyf.error('Oh...fudge')
+    </script>
   </body>
 </html>
