--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/css.gg/icons/all.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css"
@@ -55,6 +56,10 @@
           {
             type: 'home',
             background: '#d33682',
+            icon: {
+              className: 'gg-home text-white d-inline-block',
+              tagName: 'i',
+            },
           },
         ],
       })
